# zzangdol_bringup

./: CMakeLists.txt  README.md  package.xml
bag/: 2023-06-06-23-52-05.bag  2023-06-07_23:32:48.bag  2023-06-07_23:34:10.bag  2023-06-08_17:44:46.bag.REMOVED.git-id  2023-06-08_19:23:26.bag  2023-06-08_19:41:45.bag  2023-06-08_19:43:25.bag  2023-06-08_20:11:13.bag  2023-06-08_20:32:40.bag  2023-06-08_22:22:26.bag  2023-06-08_22:32:27.bag  2023-06-17_23:09:50.bag  2023-06-17_23:11:33.bag  2023-07-01_06-04-33.bag  2023-07-01_06-42-09.bag  2023-07-01_06-50-26.bag  2023-07-01_06:02:14.bag  2023-07-01_06:04:00.bag  2023-07-01_06:36:50.bag  2023-07-01_11:49:04.bag  2023-12-15_15-28-16.bag  2023-12-15_15-28-46.bag  2023-12-19_19-13-05.bag  2023-12-19_19-25-26.bag  2023-12-19_19-27-22.bag  2023-12-19_19-27-53.bag  default.bag.pbstream  ppp.bag
launch/: bag_play.launch  bag_record.launch  laser_scan_matcher.launch  zzangdol_bring_all.launch  zzangdol_bring_minimal.launch  zzangdol_bringup.launch  zzangdol_cmd_vel_converter.launch  zzangdol_core.launch  zzangdol_lidar.launch  zzangdol_myahrs.launch  zzangdol_odom_tf_publisher.launch  zzangdol_state_publisher.launch
launch/deprecated/: laser_scan_matcher.launch
rviz/: record_monitoring.rviz
src/: cmd_vel_converter.cpp  current_pose_publisher.cpp  odom_tf_publisher_node.py
src/deprecated/: current_pose_publisher.cpp  odom_tf_publisher_node.py  pose_to_odom.py
urdf/: test_car.xacro  zzangdol_ai_car.urdf  zzangdol_ai_car.urdf.xacro
